// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormattedDate/> should match snapshot for 'bg' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26.10.2024 г.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'bg' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26.10.2024 г., 10:01 ч.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'bg' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26.10, 10:01 ч.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'bg' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26.10
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'bg' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  събота
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'bg' locale and 'undefined' format 1`] = `
<Text>
  26.10.2024 г.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'de' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26.10.2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'de' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26. Okt. 2024, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'de' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26. Okt., 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'de' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26. Okt.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'de' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  Samstag
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'de' locale and 'undefined' format 1`] = `
<Text>
  26.10.2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  Oct 26, 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  Oct 26, 2024, 10:01 AM
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  Oct 26, 10:01 AM
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  Oct 26
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  Saturday
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en' locale and 'undefined' format 1`] = `
<Text>
  Oct 26, 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en-AU' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 Oct 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en-AU' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 Oct 2024, 10:01 am
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en-AU' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 Oct, 10:01 am
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en-AU' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 Oct
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en-AU' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  Saturday
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'en-AU' locale and 'undefined' format 1`] = `
<Text>
  26 Oct 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'es' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 oct 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'es' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 oct 2024, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'es' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 oct, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'es' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 oct
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'es' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  sábado
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'es' locale and 'undefined' format 1`] = `
<Text>
  26 oct 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fa' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  ۵ آبان ۱۴۰۳
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fa' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  ۵ آبان ۱۴۰۳، ۱۰:۰۱
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fa' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  ۵ آبان، ۱۰:۰۱
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fa' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  ۵ آبان
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fa' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  شنبه
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fa' locale and 'undefined' format 1`] = `
<Text>
  ۵ آبان ۱۴۰۳
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fr' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 oct. 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fr' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 oct. 2024, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fr' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 oct., 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fr' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 oct.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fr' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  samedi
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'fr' locale and 'undefined' format 1`] = `
<Text>
  26 oct. 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'hu' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  2024. okt. 26.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'hu' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  2024. okt. 26. 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'hu' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  okt. 26. 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'hu' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  okt. 26.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'hu' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  szombat
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'hu' locale and 'undefined' format 1`] = `
<Text>
  2024. okt. 26.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'it' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 ott 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'it' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 ott 2024, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'it' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 ott, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'it' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 ott
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'it' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  sabato
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'it' locale and 'undefined' format 1`] = `
<Text>
  26 ott 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ja' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  2024/10/26
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ja' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  2024年10月26日 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ja' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  10月26日 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ja' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  10月26日
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ja' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  土曜日
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ja' locale and 'undefined' format 1`] = `
<Text>
  2024/10/26
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ko' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  2024. 10. 26.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ko' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  2024년 10월 26일 오전 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ko' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  10월 26일 오전 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ko' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  10월 26일
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ko' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  토요일
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ko' locale and 'undefined' format 1`] = `
<Text>
  2024. 10. 26.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'nl' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 okt 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'nl' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 okt 2024, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'nl' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 okt, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'nl' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 okt
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'nl' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  zaterdag
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'nl' locale and 'undefined' format 1`] = `
<Text>
  26 okt 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pl' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 paź 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pl' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 paź 2024, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pl' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 paź, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pl' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 paź
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pl' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  sobota
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pl' locale and 'undefined' format 1`] = `
<Text>
  26 paź 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pt-BR' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 de out. de 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pt-BR' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 de out. de 2024, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pt-BR' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 de out., 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pt-BR' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 de out.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pt-BR' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  sábado
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'pt-BR' locale and 'undefined' format 1`] = `
<Text>
  26 de out. de 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ro' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 oct. 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ro' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 oct. 2024, 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ro' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 oct., 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ro' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 oct.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ro' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  sâmbătă
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ro' locale and 'undefined' format 1`] = `
<Text>
  26 oct. 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ru' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 окт. 2024 г.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ru' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 окт. 2024 г., 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ru' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 окт., 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ru' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 окт.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ru' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  суббота
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'ru' locale and 'undefined' format 1`] = `
<Text>
  26 окт. 2024 г.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'sv' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 okt. 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'sv' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 okt. 2024 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'sv' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 okt. 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'sv' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 okt.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'sv' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  lördag
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'sv' locale and 'undefined' format 1`] = `
<Text>
  26 okt. 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'tr' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 Eki 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'tr' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 Eki 2024 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'tr' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 Eki 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'tr' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 Eki
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'tr' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  Cumartesi
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'tr' locale and 'undefined' format 1`] = `
<Text>
  26 Eki 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'uk' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 жовт. 2024 р.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'uk' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  26 жовт. 2024 р., 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'uk' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 жовт., 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'uk' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 жовт.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'uk' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  субота
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'uk' locale and 'undefined' format 1`] = `
<Text>
  26 жовт. 2024 р.
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'vi' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  26 thg 10, 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'vi' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  10:01 26 thg 10, 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'vi' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  10:01 26 thg 10
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'vi' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  26 thg 10
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'vi' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  Thứ Bảy
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'vi' locale and 'undefined' format 1`] = `
<Text>
  26 thg 10, 2024
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-CN' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  2024年10月26日
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-CN' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  2024年10月26日 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-CN' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  10月26日 10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-CN' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  10月26日
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-CN' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  星期六
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-CN' locale and 'undefined' format 1`] = `
<Text>
  2024年10月26日
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-TW' locale and '{"dateStyle": "medium"}' format 1`] = `
<Text>
  2024年10月26日
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-TW' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short", "year": "numeric"}' format 1`] = `
<Text>
  2024年10月26日 上午10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-TW' locale and '{"day": "numeric", "hour": "numeric", "minute": "numeric", "month": "short"}' format 1`] = `
<Text>
  10月26日 上午10:01
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-TW' locale and '{"day": "numeric", "month": "short"}' format 1`] = `
<Text>
  10月26日
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-TW' locale and '{"weekday": "long"}' format 1`] = `
<Text>
  星期六
</Text>
`;

exports[`<FormattedDate/> should match snapshot for 'zh-TW' locale and 'undefined' format 1`] = `
<Text>
  2024年10月26日
</Text>
`;
